--- a/index.html
+++ b/index.html
@@ -788,8 +788,8 @@ $('[data-class]').on( "click", function(event) {
         </div>
 		
 		<div style="text-align: left;">
-            <span><a href="leosuchd.html" style="font-weight: bold; font-size: 13px; color: rgb(99, 45, 0);">Leo Success Meet (2023) Tamil TRUE WEB-DL - <span>&nbsp;</span></span>
-            <span><a href="leosuchd.html" style="font-weight: bold; color: rgb(99, 45, 0); font-size: 13px;">[1080p & 720p - AVC - 2.9GB - 1.2GB & 450MB]</a></span>
+            <span><a href="leosuchd.html" style="font-weight: bold; font-size: 13px; color: rgb(99, 45, 0);">Leo Success Meet (2023) Tamil Full Show - <span>&nbsp;</span></span>
+            <span><a href="leosuchd.html" style="font-weight: bold; color: rgb(99, 45, 0); font-size: 13px;">[1080p & 720p - AVC - 3.5GB - 2.3GB & 1.2GB + Rips]</a></span>
         </div>
 		
 		<div style="text-align: left;">
